fixed overflow on community cards

--- a/css/style.css
+++ b/css/style.css
@@ -47,11 +47,10 @@ body {
 button {
     background-color: var(--yellow);
     color: var(--blue-darker);
-    width: 10vmin;
     border: none;
-    padding: 1.5vmin;
+    padding: 1.5vmin 3vmin;
     margin: 2vmin;
-    font-size: 1.5vmin;
+    font-size: 1em;
     font-family: 'Secular One', sans-serif;
     border-radius: 1vmin;
     cursor: pointer;
@@ -161,14 +160,17 @@ TABLE-MIDDLE
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 3vmin;
+    gap: 3vh;
 }
 
 #table-middle.infos {}
 
 #community-cards {
     display: flex;
-    gap: 3vmin;
+	/*width: 100vw;
+	max-width: 1100px;*/
+    gap: 1.5vmin;
+	/*justify-content: space-around;*/
 }
 
 #community-cards div {
@@ -243,7 +245,8 @@ h3 {
 	padding: 0.5vmin;
 	background-color: #fff;
 	width: 12vmin;
-	height: 12vmin;
+	min-width: 80px;
+	z-index: 1000;
 }
 
 .chips {
